# cmake_setup

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
